@@ -302,6 +302,7 @@ LSP
 • Support for `textDocument/semanticTokens/range`.
 • Support for `textDocument/codeLens` |lsp-codelens| has been reimplemented:
   https://microsoft.github.io/language-server-protocol/specifications/lsp/3.18/specification/#textDocument_codeLens
+• Code lenses now display as virtual lines
 • Support for `workspace/codeLens/refresh`:
   https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#codeLens_refresh
 
